tests/ui/cve/cve_2020_35881/cve_2020_35881_cross_stmt.stderr
error: wrong assumption of fat pointer layout
  --> tests/ui/cve/cve_2020_35881/cve_2020_35881_cross_stmt.rs:5:15
   |
LL |     unsafe { *mem::transmute::<*const *const T, *const *const ()>(reference) }
   |              -^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |              ||
   |              |ptr transmute here
   |              try to get data ptr from first 8 bytes here
   |
   = help: the Rust Compiler does not expose the layout of fat pointers
   = note: `#[deny(rpl::wrong_assumption_of_fat_pointer_layout)]` on by default

error: wrong assumption of fat pointer layout
  --> tests/ui/cve/cve_2020_35881/cve_2020_35881_cross_stmt.rs:11:15
   |
LL |     unsafe { *mem::transmute::<*mut *mut T, *mut *mut ()>(reference) }
   |              -^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |              ||
   |              |ptr transmute here
   |              try to get data ptr from first 8 bytes here
   |
   = help: the Rust Compiler does not expose the layout of fat pointers

error: aborting due to 2 previous errors

